[package]
name = "seeeduino-xiao-m0-common"
version = "0.1.0"
edition = "2021"
type = "lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiao_m0 = {version="0.11.0", features=["usb", "unproven"]}
cortex-m = "0.7"
cortex-m-rt = "^0.6.15"
embedded-hal = "0.2.6"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
string-helper = { path= "../../embedded_lib/string_helper" } 
paste = "1.0"
void = { version="1.0.2",  default-features=false }

[profile.release]
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G19A"
